--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "aktu_circular_bot",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js",
     "build": "ngrok http 3000"
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cfworker/web": "^1.12.5",
+    "cfworker-middleware-telegraf": "^2.0.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "node-cron": "^3.0.2",
@@ -18,6 +20,9 @@
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "ngrok": "^4.3.3"
+    "ngrok": "^4.3.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
