--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "netlify-lambda": "^2.0.15",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.0",
     "telegraf": "^4.11.2"
