--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "netlify-lambda": "^2.0.15",
